# term-wrapper

./: .gitignore  BRAINSTORM.md  CHANGELOG.md  LICENSE  Makefile  QUICKSTART.md  README.md  SUMMARY.md  TEST_ON_REAL_DEVICE.md  TOUCH_SCROLLING_FIX.md  VIM_SUPPORT.md  VIM_TEST_RESULTS.md  debug_claude_vertical.py  demo.sh  demo_frontend.html  main.py  manual_test.py  package.json  pyproject.toml  setup_android_emulator.sh  start_with_vim.py
docs/: API.md  PLAYWRIGHT_DEBUGGING.md
examples/: README.md  claude_interactive.py  claude_via_stdin.py  htop_demo.py  primitives_demo.py  simple_example.py  simple_tui.py  vim_example.py
frontend/: README.md  app.js  index.html  style.css
reports/: README.md  TESTING_GUIDE.md  claude_report.md  htop_report.md  vim_report.md
scripts/: manual_test.py  test_real_app.py
skill/: SKILL.md
skills/: README.md  term-wrapper.md  tui.md
term_wrapper/: __init__.py  api.py  cli.py  screen_buffer.py  server.py  server_manager.py  session_manager.py  terminal.py  utils.py
test_app/: app.js  package.json
test_screencast/: AFTER_FIX_ANALYSIS.md  COMPREHENSIVE_TESTING_STRATEGY.md  DUPLICATION_FOUND.md  FIX_PLAN.md  README.md  README_TESTING.md  ROOT_CAUSE_ANALYSIS.md  SCREENCAST_ANALYSIS.md  TESTING_SUMMARY_V0.6.5.md  V0.6.5_VERIFICATION_REPORT.md  analyze_duplication.py  analyze_frames.py  claude_ansi_output.txt  claude_screen_output.txt  comprehensive_scroll_test.py  content_analysis.txt  debug_ansi_sequences.py  extract_video_frames.py  manual_scroll_test.html  screencast_mobile_scroll.py  test_esc_filter.py  test_scroll_speed.py  (+2 more)
(+48 files in other folders)
